# train-control-paper

./: README.md  pyproject.toml  tc.yaml
tuning/: sft_trainer.py
tuning/config/: configs.py  peft_config.py  tracker_configs.py
tuning/config/acceleration_configs/: __init__.py  acceleration_framework_config.py  attention_and_distributed_packing.py  fast_moe.py  fused_ops_and_kernels.py  quantized_lora_config.py  utils.py
tuning/data/: data_config.py  data_handlers.py  data_preprocessing_utils.py  data_processors.py  setup_dataprocessor.py
tuning/trackers/: aimstack_tracker.py  filelogging_tracker.py  hf_resource_scanner_tracker.py  mlflow_tracker.py  tracker.py  tracker_factory.py
tuning/traincoco/: __init__.py  callback.py  control.py  patience.py
tuning/traincoco/controllermetrics/: __init__.py  eval_metrics.py  history_based_metrics.py  loss.py  metricshandler.py  per_process_state.py  trainingstate.py
tuning/utils/: __init__.py  config_utils.py  data_type_utils.py  error_logging.py  evaluator.py  import_utils.py  logging.py  merge_model_utils.py  tokenizer_data_utils.py  utils.py
